--- a/game-menghasilkan-uang-dengan-mudah-mahjong-ways.html
+++ b/game-menghasilkan-uang-dengan-mudah-mahjong-ways.html
@@ -37,7 +37,7 @@
     <meta property="og:title" content="Game Online Penghasil Uang Mudah: Mahjong Ways dan Scatter Hitam" />
     <meta property="og:description" content="Mahjong Ways adalah permainan yang terinspirasi oleh permainan papan Mahjong yang sudah ada sejak lama. Dalam versi online-nya, Mahjong Ways menawarkan gameplay yang cepat, menarik, dan tentunya, menguntungkan." />
     <meta property="og:url" content="https://systemroyalenews.github.io/spesial/game-menghasilkan-uang-dengan-mudah-mahjong-ways.html" />
-    <meta property="og:image" content="https://image.ultramanlink.com/uploads/baner10.jpg.jpg" />
+    <meta property="og:image" content="https://image.ultramanlink.com/uploads/baner10.jpg" />
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:site_name" content="Royale168" />
     <meta property="og:locale" content="id_ID" />
@@ -47,7 +47,7 @@
     <meta name="twitter:title" content="Game Online Penghasil Uang Mudah: Mahjong Ways dan Scatter Hitam" />
     <meta name="twitter:description" content="Mahjong Ways adalah permainan yang terinspirasi oleh permainan papan Mahjong yang sudah ada sejak lama. Dalam versi online-nya, Mahjong Ways menawarkan gameplay yang cepat, menarik, dan tentunya, menguntungkan." />
     <meta name="twitter:url" content="$url" />
-    <meta name="twitter:image" content="https://image.ultramanlink.com/uploads/baner10.jpg.jpg" />
+    <meta name="twitter:image" content="https://image.ultramanlink.com/uploads/baner10.jpg" />
     <meta name="twitter:site" content="Royale168" />
     <meta name="twitter:creator" content="Royale168" />
     <meta name="twitter:label1" content="Estimasi waktu membaca" />
@@ -55,7 +55,7 @@
     <!-- Preload -->
     <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js" />
     <link rel="preload" href="https://image.ultramanlink.com/uploads/clovericon.png" as="image" />
-    <link rel="preload" href="https://image.ultramanlink.com/uploads/baner10.jpg.jpg" as="image" />
+    <link rel="preload" href="https://image.ultramanlink.com/uploads/baner10.jpg" as="image" />
     <!-- Script -->
     <script async src='https://cdn.ampproject.org/v0.js'></script>
     <style amp-boilerplate> body { -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both; -moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both; -ms-animation: -amp-start 8s steps(1, end) 0s 1 normal both; animation: -amp-start 8s steps(1, end) 0s 1 normal both } @-webkit-keyframes -amp-start { from { visibility: hidden } to { visibility: visible } } @-moz-keyframes -amp-start { from { visibility: hidden } to { visibility: visible } } @-ms-keyframes -amp-start { from { visibility: hidden } to { visibility: visible } } @-o-keyframes -amp-start { from { visibility: hidden } to { visibility: visible } } @keyframes -amp-start { from { visibility: hidden } to { visibility: visible } }</style>
@@ -105,7 +105,7 @@
         },
         "headline": "Game Online Penghasil Uang Mudah: Mahjong Ways dan Scatter Hitam",
         "description": "Mahjong Ways adalah permainan yang terinspirasi oleh permainan papan Mahjong yang sudah ada sejak lama. Dalam versi online-nya, Mahjong Ways menawarkan gameplay yang cepat, menarik, dan tentunya, menguntungkan.",
-    "image": ["https://image.ultramanlink.com/uploads/baner10.jpg.jpg"],
+    "image": ["https://image.ultramanlink.com/uploads/baner10.jpg"],
         "author": {
           "@type": "Organization",
           "name": "Royale168",
@@ -146,7 +146,7 @@
           <div class="marquee-text" style="background-color: var(--primary); color: #000; padding: 5px 0; border: 1px solid #f1c446; border-radius: 5px;margin-bottom: 5px;">
             <div>Game Online Penghasil Uang Mudah: Mahjong Ways dan Scatter Hitam</div>
           </div>
-          <amp-img src='https://image.ultramanlink.com/uploads/baner10.jpg.jpg' width='1280' height='720' layout='responsive' alt='Royale168'></amp-img>
+          <amp-img src='https://image.ultramanlink.com/uploads/baner10.jpg' width='1280' height='720' layout='responsive' alt='Royale168'></amp-img>
         </div>
       </div>
     </header>
