--- a/penghasil-uang-mudah-game-online-mahjong-scatter-hitam.html
+++ b/penghasil-uang-mudah-game-online-mahjong-scatter-hitam.html
@@ -38,7 +38,7 @@
     <meta property="og:title" content="Cara Menghasilkan Uang dengan Bermain Game Online Mahjong Ways" />
     <meta property="og:description" content="Mahjong Ways adalah permainan yang terinspirasi oleh permainan papan Mahjong yang sudah ada sejak lama. Dalam versi online-nya, Mahjong Ways menawarkan gameplay yang cepat, menarik, dan tentunya, menguntungkan." />
     <meta property="og:url" content="https://systemroyalenews.github.io/spesial/penghasil-uang-mudah-game-online-mahjong-scatter-hitam.html" />
-    <meta property="og:image" content="https://image.ultramanlink.com/uploads/mahjong26.jpg" />
+    <meta property="og:image" content="https://systemroyalenews.github.io/spesial/gambarku/data-58.jpg" />
     <meta property="og:image:type" content="image/jpg" />
     <meta property="og:site_name" content="Royale168" />
     <meta property="og:locale" content="id_ID" />
@@ -48,7 +48,7 @@
     <meta name="twitter:title" content="Cara Menghasilkan Uang dengan Bermain Game Online Mahjong Ways" />
     <meta name="twitter:description" content="Mahjong Ways adalah permainan yang terinspirasi oleh permainan papan Mahjong yang sudah ada sejak lama. Dalam versi online-nya, Mahjong Ways menawarkan gameplay yang cepat, menarik, dan tentunya, menguntungkan." />
     <meta name="twitter:url" content="$url" />
-    <meta name="twitter:image" content="https://image.ultramanlink.com/uploads/mahjong26.jpg" />
+    <meta name="twitter:image" content="https://systemroyalenews.github.io/spesial/gambarku/data-58.jpg" />
     <meta name="twitter:site" content="Royale168" />
     <meta name="twitter:creator" content="Royale168" />
     <meta name="twitter:label1" content="Estimasi waktu membaca" />
@@ -56,7 +56,7 @@
     <!-- Preload -->
     <link rel="preload" as="script" href="https://cdn.ampproject.org/v0.js" />
     <link rel="preload" href="https://image.ultramanlink.com/uploads/clovericon.png" as="image" />
-    <link rel="preload" href="https://image.ultramanlink.com/uploads/mahjong26.jpg" as="image" />
+    <link rel="preload" href="https://systemroyalenews.github.io/spesial/gambarku/data-58.jpg" as="image" />
     <!-- Script -->
     <script async src='https://cdn.ampproject.org/v0.js'></script>
     <style amp-boilerplate> body { -webkit-animation: -amp-start 8s steps(1, end) 0s 1 normal both; -moz-animation: -amp-start 8s steps(1, end) 0s 1 normal both; -ms-animation: -amp-start 8s steps(1, end) 0s 1 normal both; animation: -amp-start 8s steps(1, end) 0s 1 normal both } @-webkit-keyframes -amp-start { from { visibility: hidden } to { visibility: visible } } @-moz-keyframes -amp-start { from { visibility: hidden } to { visibility: visible } } @-ms-keyframes -amp-start { from { visibility: hidden } to { visibility: visible } } @-o-keyframes -amp-start { from { visibility: hidden } to { visibility: visible } } @keyframes -amp-start { from { visibility: hidden } to { visibility: visible } }</style>
@@ -106,7 +106,7 @@
         },
         "headline": "Cara Menghasilkan Uang dengan Bermain Game Online Mahjong Ways",
         "description": "Mahjong Ways adalah permainan yang terinspirasi oleh permainan papan Mahjong yang sudah ada sejak lama. Dalam versi online-nya, Mahjong Ways menawarkan gameplay yang cepat, menarik, dan tentunya, menguntungkan.",
-    "image": ["https://image.ultramanlink.com/uploads/mahjong26.jpg"],
+    "image": ["https://systemroyalenews.github.io/spesial/gambarku/data-58.jpg"],
         "author": {
           "@type": "Organization",
           "name": "Royale168",
@@ -147,7 +147,7 @@
           <div class="marquee-text" style="background-color: var(--primary); color: #000; padding: 5px 0; border: 1px solid #f1c446; border-radius: 5px;margin-bottom: 5px;">
             <div>Cara Menghasilkan Uang dengan Bermain Game Online Mahjong Ways</div>
           </div>
-          <amp-img src='https://image.ultramanlink.com/uploads/mahjong26.jpg' width='1280' height='720' layout='responsive' alt='Royale168'></amp-img>
+          <amp-img src='https://systemroyalenews.github.io/spesial/gambarku/data-58.jpg' width='1280' height='720' layout='responsive' alt='Royale168'></amp-img>
         </div>
       </div>
     </header>
